testing initiated